--- a/requirements_allinone.txt
+++ b/requirements_allinone.txt
@@ -51,6 +51,7 @@ contourpy==1.3.0
 fonttools==4.53.1
 cycler==0.12.1
 kiwisolver==1.4.7
+seaborn==0.13.2
 
 # Core dependencies
 antlr4-python3-runtime==4.9.3
