chore: Rename audio output directory to poc_output_allinone in all-in-one compose.

--- a/docker-compose.allinone.yml
+++ b/docker-compose.allinone.yml
@@ -13,7 +13,7 @@ services:
       - ./:/workspace
       # Mount audio directories
       - ./poc_audio:/workspace/audio_input
-      - ./poc_output:/workspace/audio_output
+      - ./poc_output_allinone:/workspace/audio_output
       # Mount cache directory to persist model downloads
       - ~/.cache:/root/.cache
     environment:
