build: add optional scraper dependencies to pyproject.toml
Configure uv package management with optional dependencies for the
lyrics scraper tool. Cleanup system Python environment.

Changes:
- Add [project.optional-dependencies] section with 'scraper' extra
- Include beautifulsoup4, lxml, requests, and pypinyin for web scraping
- Configure setuptools package discovery to include poc* only
- Remove legacy comment about requirements.txt management

This enables proper uv workflow:
  uv run --extra scraper poc/lyrics_scraper.py

Fixes incorrect pip install to system Python and establishes correct
uv-based dependency management for the project.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,8 +6,20 @@ authors = [{name = "Your Name", email = "your.email@example.com"}]
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.11"
+dependencies = []
 
-# Dependencies are now managed in requirements.txt
+[project.optional-dependencies]
+scraper = [
+    "beautifulsoup4>=4.14.0",
+    "lxml>=6.0.0",
+    "requests>=2.32.0",
+    "pypinyin>=0.52.0"
+]
+
+# Package discovery - only include poc directory
+[tool.setuptools.packages.find]
+include = ["poc*"]
+exclude = ["tests*", "test*"]
 
 [tool.black]
 line-length = 100
