--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,6 +63,11 @@ migration = [
     "pypinyin>=0.52.0",
 ]
 
+# Turso sync dependencies
+turso = [
+    "libsql>=0.1.0",
+]
+
 # Admin CLI dependencies
 admin = [
     "typer>=0.9.0",
