--- a/services/analysis/docker-compose.yml
+++ b/services/analysis/docker-compose.yml
@@ -10,17 +10,18 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - R2_BUCKET=${R2_BUCKET:-sow-audio}
-      - R2_ENDPOINT_URL=${R2_ENDPOINT_URL}
+      - SOW_R2_BUCKET=${SOW_R2_BUCKET}
+      - SOW_R2_ENDPOINT_URL=${SOW_R2_ENDPOINT_URL}
       - SOW_R2_ACCESS_KEY_ID=${SOW_R2_ACCESS_KEY_ID}
       - SOW_R2_SECRET_ACCESS_KEY=${SOW_R2_SECRET_ACCESS_KEY}
-      - ANALYSIS_API_KEY=${ANALYSIS_API_KEY}
+      - SOW_ANALYSIS_API_KEY=${SOW_ANALYSIS_API_KEY}
       - MAX_CONCURRENT_JOBS=${MAX_CONCURRENT_JOBS:-2}
       - DEMUCS_DEVICE=${DEMUCS_DEVICE:-cpu}
       - NATTEN_LOG_LEVEL=error
       # LLM Configuration for LRC generation
       - SOW_LLM_API_KEY=${SOW_LLM_API_KEY}
-      - SOW_LLM_BASE_URL=${SOW_LLM_BASE_URL:-https://openrouter.ai/api/v1}
+      - SOW_LLM_BASE_URL=${SOW_LLM_BASE_URL}
+      - SOW_LLM_MODEL=${SOW_LLM_MODEL}
       # Whisper Configuration
       - WHISPER_DEVICE=${WHISPER_DEVICE:-cpu}
     volumes:
