--- a/services/analysis/pyproject.toml
+++ b/services/analysis/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "uvicorn[standard]>=0.27.0",
     "pydantic>=2.0.0",
     "pydantic-settings>=2.0.0",
+    "madmom @ git+https://github.com/CPJKU/madmom.git",
     "allin1>=1.1.0",
     "demucs>=4.0.0",
     "librosa>=0.10.0",
