--- a/services/qwen3/.env.example
+++ b/services/qwen3/.env.example
@@ -1,35 +1,86 @@
-# Qwen3 Alignment Service Environment Variables
+# Qwen3 Alignment Service - Environment Configuration
+# Copy this file to .env and configure for your environment
 
+# ========================================
 # Model Configuration
-# Path to pre-downloaded Qwen3-ForcedAligner-0.6B model directory
-# This should point to a local directory containing the model files
-SOW_QWEN3_MODEL_VOLUME=/models/qwen3-forced-aligner
+# ========================================
 
-# Device to run the model on (auto/mps/cuda/cpu)
-# auto: Automatically detect available device
-# mps: Apple Silicon GPU
-# cuda: NVIDIA GPU (requires CUDA toolkit)
-# cpu: CPU only
+SOW_QWEN3_MODEL_PATH=/models/qwen3-forced-aligner
+# Path to Qwen3 forced aligner model (HuggingFace ID or local path)
+# Default: /models/qwen3-forced-aligner
+# For HuggingFace ID: Qwen/Qwen2-Audio-ForcedAlignment-0.6B (model will be auto-downloaded)
+
 SOW_QWEN3_DEVICE=auto
+# Device to run model on
+# Options:
+#   - auto (default): Auto-detect available GPU (CUDA/MPS) or fallback to CPU
+#   - mps: Apple Silicon GPU (Metal Performance Shaders)
+#   - cuda: NVIDIA GPU (requires CUDA runtime)
+#   - cpu: CPU inference (slower, no GPU required)
 
-# Data type for model (bfloat16/float16/float32)
 SOW_QWEN3_DTYPE=float32
+# Model precision (data type)
+# Options:
+#   - float32 (default): Highest precision, supported on all devices
+#   - float16: Faster on GPU, slightly reduced precision
+#   - bfloat16: Recommended for GPUs, balance of speed and precision
+# Note: float16/bfloat16 require GPU support
 
+SOW_QWEN3_MAX_CONCURRENT=2
 # Maximum concurrent alignment requests
-SOW_QWEN3_MAX_CONCURRENT=1
+# Recommendations:
+#   - 2 = Balance throughput and memory usage for production (4GB+ RAM)
+#   - 3 = Higher throughput if sufficient memory available (8GB+ RAM)
+#   - 1 = Conservative, minimal memory usage
+# For CPU-only inference, keep at 1-2 to avoid OOM errors
 
-# Security
-# Optional API key for authentication
-# Leave empty to disable authentication (development mode)
-SOW_QWEN3_API_KEY=
+# ========================================
+# R2 Storage Configuration (Optional)
+# ========================================
 
-# R2/S3 Configuration (for audio download)
-# These are needed for downloading audio files from R2 or S3 storage
 SOW_QWEN3_R2_BUCKET=
-SOW_QWEN3_R2_ENDPOINT_URL=
-SOW_QWEN3_R2_ACCESS_KEY_ID=
-SOW_QWEN3_R2_SECRET_ACCESS_KEY=
+# Cloudflare R2 bucket name for audio storage
+# Leave empty if not using R2 (direct HTTP URLs will be used)
 
-# Docker Specific
-# Target platform for build (linux/amd64, linux/arm64)
+SOW_QWEN3_R2_ENDPOINT_URL=
+# R2 API endpoint URL
+# Example: https://<accountid>.r2.cloudflarestorage.com
+
+SOW_QWEN3_R2_ACCESS_KEY_ID=
+# R2 access key ID
+# Required if SOW_QWEN3_R2_BUCKET is set
+
+SOW_QWEN3_R2_SECRET_ACCESS_KEY=
+# R2 secret access key
+# Required if SOW_QWEN3_R2_BUCKET is set
+
+# ========================================
+# API Security (Optional)
+# ========================================
+
+SOW_QWEN3_API_KEY=
+# API key for request authentication
+# If set, all requests must include X-API-Key header with this value
+# Leave empty to disable authentication (not recommended for production)
+
+# ========================================
+# Cache and Processing
+# ========================================
+
+SOW_QWEN3_CACHE_DIR=/cache
+# Directory for cached audio files and temporary data
+# Default: /cache (mounted from docker volume)
+
+# ========================================
+# Docker Build Configuration
+# ========================================
+
 TARGETPLATFORM=linux/amd64
+# Target platform for Docker build
+# Options: linux/amd64, linux/arm64
+# Docker Compose only: used in build args for multi-platform support
+
+SOW_QWEN3_MODEL_VOLUME=/models/qwen3-forced-aligner
+# Docker Compose volume mount path for model directory
+# Maps host path to container path for model files
+# Only used in docker-compose.yml, not read by the application
