--- a/.planning/config.json
+++ b/.planning/config.json
@@ -5,8 +5,11 @@
   "commit_docs": true,
   "model_profile": "balanced",
   "workflow": {
-    "research": true,
-    "plan_check": true,
-    "verifier": true
+    "research": false,
+    "plan_check": false,
+    "verifier": false
+  },
+  "git": {
+    "branching_strategy": "none"
   }
 }
